// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Build, test, preview and send your transmissions.
      </p>,
      "image": "Templates",
      "show": false,
      "title": "Manage your email templates",
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create Template",
      "to": "/templates/create",
    }
  }
  title="Templates"
>
  <TableCollection
    columns={
      Array [
        Object {
          "label": "Name",
          "width": "25%",
        },
        Object {
          "label": "ID",
          "width": "25%",
        },
        Object {
          "label": "Status",
          "width": "15%",
        },
        Object {
          "label": "Updated",
        },
        Object {
          "label": "Subaccount",
          "width": "15%",
        },
      ]
    }
    defaultSortColumn={null}
    defaultSortDirection="asc"
    filterBox={
      Object {
        "exampleModifiers": Array [
          "id",
          "name",
        ],
        "itemToStringKeys": Array [
          "name",
          "id",
          "subaccount_id",
        ],
        "show": true,
      }
    }
    getRowData={[Function]}
    pagination={true}
    rows={
      Array [
        Object {
          "name": "Temp 1",
        },
        Object {
          "name": "Temp 2",
        },
      ]
    }
  />
</Page>
`;

exports[`renders empty state 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Build, test, preview and send your transmissions.
      </p>,
      "image": "Templates",
      "show": true,
      "title": "Manage your email templates",
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create Template",
      "to": "/templates/create",
    }
  }
  title="Templates"
>
  <TableCollection
    columns={
      Array [
        Object {
          "label": "Name",
          "width": "25%",
        },
        Object {
          "label": "ID",
          "width": "25%",
        },
        Object {
          "label": "Status",
          "width": "15%",
        },
        Object {
          "label": "Updated",
        },
        Object {
          "label": "Subaccount",
          "width": "15%",
        },
      ]
    }
    defaultSortColumn={null}
    defaultSortDirection="asc"
    filterBox={
      Object {
        "exampleModifiers": Array [
          "id",
          "name",
        ],
        "itemToStringKeys": Array [
          "name",
          "id",
          "subaccount_id",
        ],
        "show": true,
      }
    }
    getRowData={[Function]}
    pagination={true}
    rows={
      Array [
        Object {
          "name": "Temp 1",
        },
        Object {
          "name": "Temp 2",
        },
      ]
    }
  />
</Page>
`;

exports[`renders errors when present 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Build, test, preview and send your transmissions.
      </p>,
      "image": "Templates",
      "show": false,
      "title": "Manage your email templates",
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create Template",
      "to": "/templates/create",
    }
  }
  title="Templates"
>
  <ApiErrorBanner
    errorDetails="Uh oh! It broke. "
    message="Sorry, we seem to have had some trouble loading your templates."
    reload={
      [MockFunction] {
        "calls": Array [
          Array [],
          Array [],
          Array [],
          Array [],
        ],
      }
    }
  />
</Page>
`;
